<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.golfnationsmob.GolfView.NewRound.CourseOption"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/toplayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ebedf1"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Greyhawk"
            android:id="@+id/idcoursename"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#10171f"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/courseCombinationText"
            android:id="@+id/selectcoursetext"
            android:layout_below="@+id/idcoursename"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#51677e"
            android:layout_marginLeft="12dp"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:background="#10171f">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text=""
        android:background="#10171f"
        android:textColor="#ffffff"

        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_weight="1"
        android:layout_gravity="left|bottom"
        android:textAlignment="center"
        android:layout_marginLeft="100dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="CONTINUE"
        android:id="@+id/courseOptionContinue"
        android:background="#10171f"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_weight="1"
        android:layout_gravity="left|bottom"
        android:textAlignment="center"
        android:layout_marginLeft="80dp"  />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView9"
        android:layout_below="@+id/toplayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/FRONT"
                android:id="@+id/Fronttextid"
                android:layout_below="@+id/toplayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#1a2531"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="12dp"
                android:textSize="16dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_below="@+id/Fronttextid"
                android:background="#f1f2f5"
                android:id="@+id/frontraptorLayout"
                android:layout_marginTop="5dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frontraptor"
                    android:layout_marginTop="5dp"
                    android:textColor="#1a2531"
                    android:allowUndo="false"
                    android:button="@drawable/check1"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:scaleX="0.80"
                    android:scaleY="0.80"
                    android:textAlignment="center"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Raptor"
                    android:id="@+id/frontraptortext"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="18dp"
                    android:textColor="#1a2531" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_below="@+id/frontraptorLayout"
                android:layout_marginTop="4dp"
                android:background="#f1f2f5"
                android:id="@+id/fronttalanLayout">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fronttalan"
                    android:layout_marginTop="5dp"
                    android:textColor="#1a2531"
                    android:button="@drawable/check1"
                    android:scaleX="0.80"
                    android:scaleY="0.80"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Talon"
                    android:id="@+id/fronttalantext"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:textSize="18dp"
                    android:textColor="#1a2531" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/BACK"
                android:id="@+id/Backintextid"
                android:layout_below="@+id/fronttalanLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#1a2531"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="12dp"
                android:textSize="16dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_below="@+id/Backintextid"
                android:background="#f1f2f5"
                android:id="@+id/backraptorLayout"
                android:layout_marginTop="5dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/backraptor"
                    android:layout_marginTop="5dp"
                    android:textColor="#1a2531"
                    android:scaleX="0.80"
                    android:scaleY="0.80"
                    android:allowUndo="false"
                    android:button="@drawable/check1"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Raptor"
                    android:id="@+id/backraptortext"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="18dp"
                    android:textColor="#1a2531" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_below="@+id/backraptorLayout"
                android:layout_marginTop="4dp"
                android:background="#f1f2f5"
                android:id="@+id/backtalanLayout">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/backtalan"
                    android:layout_marginTop="5dp"
                    android:textColor="#1a2531"
                    android:scaleX="0.80"
                    android:scaleY="0.80"
                    android:button="@drawable/check1"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Talon"
                    android:id="@+id/backtalantext"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:textSize="18dp"
                    android:textColor="#1a2531" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
